<resources>
    <string name="app_name">Android Labs</string>
    <string name="GUI">Look at my GUI</string>
    <string name="Click">Click here</string>
    <string name="Check">Check this out!</string>
    <string name="Switch">Switch on/off</string>
    <string name="Type">Type here</string>
    <string name="information">Here is more information</string>
    <string name="on">The switch is now on</string>
    <string name="off">The switch is now off</string>
    <string name="undo">Undo</string>
    <string name="enterEmailHeader"> Enter your email address </string>
    <string name="emailInputHint">Type your email here</string>
    <string name="enterpasswordHeader">Type your password</string>
    <string name="login">Log in</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_picture">Your picture</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="take_picture_hint">Click button above to take a picture</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
</resources>

