<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:text="@string/GUI">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Click"
            android:gravity="fill"
            android:layout_weight="1"
            android:id="@+id/btn">

        </Button>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Check"
            android:gravity="fill"
            android:layout_weight="1">
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:gravity="fill"
            android:layout_weight="1">

        </ImageButton>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Switch"
            android:layout_weight="1"
            android:gravity="fill"
            android:id="@+id/sth">

        </Switch>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Type"
            android:inputType="textPersonName">

        </EditText>

    </LinearLayout>
</LinearLayout>
