<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    >
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:text="@string/GUI"
        android:layout_row="0"
        android:layout_columnSpan="2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Click"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:id="@+id/btn" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check"
        android:gravity="fill"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:gravity="fill"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_weight="1">

    </ImageButton>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:id="@+id/sth">
    </Switch>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Type"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName">

    </EditText>

</GridLayout>